Bugfix: Small gap in header

--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -7,10 +7,10 @@
 }
 
 @media (max-width: 768px) { 
-  .header { margin-left: 10px; margin-right: 10px; margin-top: 15px; }
+  .header { padding-left: 10px; padding-right: 10px; padding-top: 15px; }
 }
 @media (min-width: 768px) { 
-  .header { margin: 30px; }
+  .header { padding: 30px; }
 }
 
 @media (min-width: 768px) { 
@@ -31,11 +31,16 @@
   padding-right: 0px !important;
 }
 
+.hamburger-button-dark {
+  border-width: 0px !important;
+  padding-right: 0px !important;
+}
+
 @media (min-width: 576px) { 
-  .buttons {  position: absolute; top: 30px;  right: 0px; }
+  .buttons {  position: absolute; top: 30px;  right: 30px; }
 }
 @media (max-width: 768px) and (min-width: 576px) { 
-  .buttons {  position: absolute; top: 20px;  right: 0px; }
+  .buttons {  position: absolute; top: 20px;  right: 10px; }
 }
 
 
